@@ -63,9 +63,9 @@ public class SequestSearchProtocol extends AbstractMS2SearchProtocol<SequestPipe
         if(dbNames.isEmpty())
             throw new IllegalArgumentException("A sequence database must be selected.");
 
-        FileLike fileSequenceDB = getDirSeqRoot().resolveFile(org.labkey.api.util.Path.parse(dbNames.get(0)));
+        FileLike fileSequenceDB = getDirSeqRoot().resolveFile(org.labkey.api.util.Path.parse(dbNames.getFirst()));
         if (!fileSequenceDB.exists())
-            throw new IllegalArgumentException("Sequence database '" + dbNames.get(0) + "' is not found in local FASTA root.");
+            throw new IllegalArgumentException("Sequence database '" + dbNames.getFirst() + "' is not found in local FASTA root.");
 
         super.validate(root);
     }
